# PenMath

./: CMakeLists.txt  PenMathConfig.cmake.in  README.md
.github/ISSUE_TEMPLATE/: code-bug.md  feature--.md
Header/Angle/: Radian.h
Header/Matrix/: Mat4.h
Header/Vector/Vector3/: Vector3.h  Vector3.hpp
PenMath/: CMakeLists.txt
PenMath/Header/: Arithmetic.h  Interpolation.h  Interpolation.hpp  PenMath.h  Quaternion.h  Transform.h  Trigonometry.cpp  Trigonometry.h
PenMath/Header/Angle/: Degree.h  Radian.h
PenMath/Header/Matrix/: Mat2.h  Mat3.h  Mat4.h  Matrix3.h
PenMath/Header/PenMath/Vector/: Vector2.h  Vector2.hpp  VectorBase.h
PenMath/Header/Vector/: Vector2.h  Vector2.hpp  VectorBase.h
PenMath/Header/Vector/Vector2/: Vector2.h  Vector2.hpp
PenMath/Header/Vector/Vector3/: Vector3.h  Vector3.hpp
PenMath/Header/Vector/Vector4/: Vector4.h  Vector4.hpp
PenMath/Source/: Arithmetic.cpp  Interpolation.cpp  PenMath.cpp  Quaternion.cpp  Transform.cpp  Trigonometry.cpp
PenMath/Source/Angle/: Degree.cpp  Radian.cpp
PenMath/Source/Matrix/: Mat2.cpp  Mat3.cpp  Mat4.cpp  Matrix3.cpp
PenMathTester/: CMakeLists.txt
PenMathTester/Source/: Matrix3_Tetser.cpp  PenMathTester.cpp  Vector2_Tester.cpp  main.cpp
Source/: Arithmetic.cpp
Source/Angle/: Degree.cpp
